Fullstack_CRUD/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: dev
spec:
  replicas: 5
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: dnptestaccount/fullstack_crud-backend:2.0
          imagePullPolicy: Always
          ports:
            - containerPort: 7001
          livenessProbe:
            httpGet:
              path: /api/v1/employees
              port: 7001
            initialDelaySeconds: 120
            periodSeconds: 30
            failureThreshold: 5
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /api/v1/employees
              port: 7001
            initialDelaySeconds: 120
            periodSeconds: 30
            failureThreshold: 5
            successThreshold: 1
          resources:
            requests:
              cpu: "1"  # 1 CPU core
              memory: "512Mi"  # 512MB RAM
            limits:
              cpu: "2"  # 2 CPU core max
              memory: "1Gi"  # 1GB RAM max

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: dev
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 7001
      targetPort: 7001
      nodePort: 30001
  type: NodePort
