Fullstack_CRUD/k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: backend.local
    http:
      paths:
      - path: /api/v1/employees
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 7001
      - path: /api/v1/crash
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 7001
      - path: /api/v1/stop-server
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 7001
      - path: /api/v1/high-cpu
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 7001
